<resources>
    <string name="app_name">EveryWhereTrips</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="agree_protocol">登录或者注册即同意到处用户协议</string>
    <string name="for_more_service">您好,为了获取更好的服务</string>
    <string name="login_app">请登录到处旅行</string>
    <string name="contry_code">+86</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="send_again">重新发送</string>
    <string name="input_verify">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="oauth_cancel">授权取消了</string>
    <string name="oauth_error">授权失败</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yinzuo">银座</string>
    <string name="dongjing">东京</string>
    <string name="shopping">疯狂购物买买买</string>
    <string name="goumai">530人购买</string>
    <string name="trips_name">杨晨</string>
    <string name="guanzhu">248人关注</string>
    <string name="trips_address">东京</string>
    <string name="trips_autor">日本国家旅游局专栏作者</string>
    <string name="jiage">￥28.00</string>
    <string name="get_verify_fail">获取验证码失败</string>
    <string name="verify_code">验证码：</string>
    <string name="auto_login">自动登录</string>
    <string name="nav_head_name">林小姐</string>
    <string name="nav_head_signname">四体不勤五谷不分人懒嘴馋花痴健忘</string>
    <string name="nav_head_bianji">编辑</string>
    <string name="wallet">我的钱包</string>
    <string name="money">99</string>
    <string name="yuan">元</string>
    <string name="bonus">赢取奖金</string>
    <string name="nav_head_kaquan">我的卡券</string>
    <string name="nav_head_yigou">已购行程</string>
    <string name="nav_head_shoucang">我的收藏</string>
    <string name="nav_head_guanzhu">我的关注</string>
    <string name="kefu">联系客服</string>
    <string name="fankui">意见反馈</string>
    <string name="banben">版本检测</string>
    <string name="chong">重新发送(</string>
    <string name="chongend">s)</string>
    <string name="chongfa">重新发送</string>
    <string name="datum_head">个人信息</string>
    <string name="datum_tujing">获取途径</string>
    <string name="datum_text_photo">头像</string>
    <string name="datum_text_name">用户昵称</string>
    <string name="datum_name">伴小米</string>
    <string name="datum_text_sex">性别</string>
    <string name="datum_sex">保密</string>
    <string name="datum_text_qianming">个性签名</string>
    <string name="datum_qianming">四肢不全五体不勤</string>
    <string name="datum_gaimi">修改密码</string>
    <string name="datum_bangshou">绑定手机</string>
    <string name="tuideng">退出登录</string>
    <string name="my_headphoto">个人头像</string>
    <string name="ok">完成</string>
    <string name="cancel">取消</string>
    <string name="camera">拍照</string>
    <string name="album">打开手机相册</string>
    <string name="msg_no_camera">没打开相机</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="yao">保密</string>
    <string name="up_name">修改昵称</string>
    <string name="guide_textone">严选当地人的私藏线路</string>
    <string name="guide_textthree">智能地图为你指路</string>
    <string name="tiyan">立即体验</string>
    <string name="guide_texttwo">智能语音实时导览</string>
    <string name="yulan">预览线路</string>
    <string name="collect">收藏</string>
    <string name="trips_partic">伴米详情</string>
</resources>
