<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/open_camera_ll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/c_33000000">

    <Button
        android:id="@+id/open_camera_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/camera"
        android:textColor="@color/c_000000"
        android:background="@color/white"/>

    <Button
        android:id="@+id/open_camera_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/album"
        android:textColor="@color/c_000000"
        android:background="@color/white"/>

    <Button
        android:id="@+id/open_camera_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/cancel"
        android:textColor="@color/c_000000"
        android:background="@color/white"/>


</LinearLayout>