<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_320"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <RelativeLayout
        android:id="@+id/nav_head_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:scaleType="center"
            android:id="@+id/nav_head_photoo"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_27"
            android:src="@drawable/begin_page"/>

        <TextView
            android:id="@+id/nav_head_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_head_name"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/c_333333"
            android:layout_marginLeft="@dimen/dp_93"
            android:layout_marginTop="@dimen/dp_32"/>

        <TextView
            android:id="@+id/nav_head_signname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_head_signname"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c_999"
            android:layout_marginLeft="@dimen/dp_95"
            android:layout_marginTop="@dimen/dp_62"/>

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:src="@mipmap/icon_me_bianji"
            android:layout_marginLeft="@dimen/dp_239"
            android:layout_marginTop="@dimen/dp_84"/>

        <TextView
            android:id="@+id/nav_head_bianji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_head_bianji"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_fa6a13"
            android:layout_marginLeft="@dimen/dp_259"
            android:layout_marginTop="@dimen/dp_81"/>
    </RelativeLayout>
    
    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_122"
        android:layout_marginTop="@dimen/dp_145"
        android:layout_marginLeft="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="@dimen/dp_288"
            android:layout_height="@dimen/dp_122"
            android:background="@drawable/nav_head_jianbian">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_ffffff"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textSize="@dimen/sp_58"
                android:textColor="@color/c_ffffff"
                android:layout_marginLeft="@dimen/dp_101"
                android:layout_marginTop="@dimen/dp_29"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_ffffff"
                android:layout_marginLeft="@dimen/dp_174"
                android:layout_marginTop="@dimen/dp_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_ffffff"
                android:layout_marginLeft="@dimen/dp_205"
                android:layout_marginTop="@dimen/dp_94"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_267"
                android:layout_marginTop="@dimen/dp_95"
                android:text=">>"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/c_ffffff"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_212"
        android:layout_marginTop="@dimen/dp_286"
        android:layout_marginLeft="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10">
        <RelativeLayout
            android:layout_width="@dimen/dp_288"
            android:layout_height="@dimen/dp_212">
            
            <RelativeLayout
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_50">

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_14"
                    android:src="@mipmap/icon_me_kaquan"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_marginTop="@dimen/dp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_head_kaquan"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/c_333333"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_17"/>

                <ImageView
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_15"
                    android:src="@mipmap/xiayibu"
                    android:layout_marginLeft="@dimen/dp_270"
                    android:layout_marginTop="@dimen/dp_17"/>

                <View
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_47"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/c_f0f0f0"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_58">
                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_14"
                    android:src="@mipmap/icon_me_yigou"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_marginTop="@dimen/dp_11"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_head_yigou"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/c_333333"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_9"/>

                <ImageView
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_15"
                    android:src="@mipmap/xiayibu"
                    android:layout_marginLeft="@dimen/dp_270"
                    android:layout_marginTop="@dimen/dp_10"/>

                <View
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/c_f0f0f0"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nav_head_follw"
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_106">
                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_14"
                    android:src="@mipmap/icon_me_shoucang"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_marginTop="@dimen/dp_11"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_head_shoucang"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/c_333333"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_9"/>

                <ImageView
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_15"
                    android:src="@mipmap/xiayibu"
                    android:layout_marginLeft="@dimen/dp_270"
                    android:layout_marginTop="@dimen/dp_10"/>

                <View
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/c_f0f0f0"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nav_head_myfollow"
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_50"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_14"
                    android:src="@mipmap/icon_me_guanzhu"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:layout_marginTop="@dimen/dp_11"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_head_guanzhu"
                    android:textSize="@dimen/dp_14"
                    android:textColor="@color/c_333333"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_9"/>

                <ImageView
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_15"
                    android:src="@mipmap/xiayibu"
                    android:layout_marginLeft="@dimen/dp_270"
                    android:layout_marginTop="@dimen/dp_12"/>

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_13"
        android:src="@mipmap/icon_me_kefu"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_625"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kefu"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_333333"
        android:layout_marginTop="@dimen/dp_624"
        android:layout_marginLeft="@dimen/dp_41"/>

    <ImageView
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_13"
        android:src="@mipmap/icon_me_fankui"
        android:layout_marginLeft="@dimen/dp_123"
        android:layout_marginTop="@dimen/dp_626"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fankui"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_333333"
        android:layout_marginTop="@dimen/dp_625"
        android:layout_marginLeft="@dimen/dp_143"/>

    <ImageView
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_13"
        android:src="@mipmap/icon_me_banben"
        android:layout_marginLeft="@dimen/dp_225"
        android:layout_marginTop="@dimen/dp_626"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banben"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_333333"
        android:layout_marginTop="@dimen/dp_625"
        android:layout_marginLeft="@dimen/dp_247"/>

</RelativeLayout>