<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_450"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        app:cardCornerRadius="@dimen/dp_10">

        <ImageView
            android:scaleType="center"
            android:id="@+id/img"
            android:layout_width="@dimen/dp_335"
            android:layout_height="@dimen/dp_450"
            android:src="@mipmap/ic_launcher"/>

        <RelativeLayout
            android:layout_width="@dimen/dp_335"
            android:layout_height="@dimen/dp_116"
            android:background="@color/c_80ffffff">

                <TextView
                    android:id="@+id/yinzuo"
                    android:layout_width="@dimen/dp_220"
                    android:layout_height="@dimen/dp_35"
                    android:text="@string/yinzuo"
                    android:textSize="@dimen/sp_26"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_27"
                    android:textColor="@color/c_373737"/>
                <ImageView
                    android:id="@+id/weizhi"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_12"
                    android:src="@mipmap/location"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_below="@id/yinzuo"/>
                <TextView
                    android:id="@+id/dongjing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dongjing"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/c_999"
                    android:layout_below="@id/yinzuo"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_2"/>
                <Button
                    android:id="@+id/price"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_21"
                    android:text="@string/jiage"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/c_ffffff"
                    android:background="@drawable/bg_btn_fa6a13_r15"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_246"
                    android:layout_marginTop="@dimen/dp_34"/>

                <TextView
                    android:id="@+id/shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_5"
                    android:textColor="@color/c_636363"
                    android:layout_below="@id/weizhi"
                    />
                <TextView
                    android:id="@+id/goumai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goumai"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/c_636363"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_64"
                    />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
